@@ -1,5 +1,6 @@
-@comment $NetBSD: PLIST,v 1.3 2004/08/15 15:17:07 minskim Exp $
+@comment $NetBSD: PLIST,v 1.4 2004/08/25 18:35:06 minskim Exp $
 lib/X11/fonts/TTF/09t@quark.ttf
+lib/X11/fonts/TTF/Bandal.ttf
 lib/X11/fonts/TTF/Eunjin.ttf
 lib/X11/fonts/TTF/Ongdalsam.ttf
 share/doc/alee-ttf/COPYING
