@@ -1,4 +1,4 @@
-$NetBSD: distinfo,v 1.5 2004/08/15 15:17:07 minskim Exp $
+$NetBSD: distinfo,v 1.6 2004/08/25 18:35:06 minskim Exp $
 
-SHA1 (ttf-alee_1.4.tar.gz) = 9b4fc824fec10ee90367c056d1c5b1284cc49f40
-Size (ttf-alee_1.4.tar.gz) = 279863 bytes
+SHA1 (ttf-alee_2.7.tar.gz) = 3c0d71c129250bdb822192de038030516f6df10b
+Size (ttf-alee_2.7.tar.gz) = 394176 bytes
